# izumo

./: .commitlintrc.json  .editorconfig  .env.example  .gitignore  .swcrc  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  build.rs  diesel.toml  docker_entrypoint.sh  drizzle.config.ts  justfile  lefthook.yml  nest-cli.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  shell.nix  tsconfig.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  labels.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  sync-labels.yml
.lefthook/commit-msg/: commitlint.sh
database/: Cargo.toml
database/src/: lib.rs  models.rs  schema.rs
database/src/models/: bot.rs  bot_to_user.rs  user.rs  vanity.rs
middlewares/: Cargo.toml
migrations/2024-07-30-164348_add_users/: down.sql  up.sql
migrations/2024-08-02-184542_add_bots/: down.sql  up.sql
migrations/2024-08-26-150317_remove_status/: down.sql  up.sql
migrations/2024-08-28-203536_rename_bot_to_user/: down.sql  up.sql
migrations/2024-09-02-115501_add_categories/: down.sql  up.sql
migrations/2024-09-10-175913_add_bot_reviews/: down.sql  up.sql
migrations/2024-09-17-204510_add_api_tokens/: down.sql  up.sql
migrations/2024-09-19-193244_add_user_discord_access_token/: down.sql  up.sql
migrations/2024-09-20-144123_remove_user_permissions/: down.sql  up.sql
migrations/2024-10-20-194623_add_bot_supported_language/: down.sql  up.sql
migrations/2024-10-30-161334_add_bot_approximate_guild_count/: down.sql  up.sql
migrations/2024-11-04-000830_add_bots_count_trigger_to_categories/: down.sql  up.sql
migrations/2024-11-15-152616_add_bot_votes/: down.sql  up.sql
oauth/: Cargo.toml
patches/: drizzle-orm@0.30.9.patch  prisma-generator-drizzle@0.7.1.patch
prisma/: schema.prisma
services/: Cargo.toml
services/src/: lib.rs
services/src/auth/: verify.rs
services/src/bot/: mod.rs
services/src/user/: mod.rs
src/: app.controller.ts  app.module.ts  app.rs  auth.rs  controllers.rs  db.rs  headers.rs  main.rs  main.ts  models.rs  real_ip.rs  redis.rs  router.rs  schema.patch  schema.rs  sql.rs  task.rs  util.rs  views.rs
src/config/: base.rs  database_pools.rs  discord.rs  mod.rs  redis.rs  sentry.rs  server.rs
src/controllers/: bot.rs  category.rs  helpers.rs  summary.rs  token.rs  user.rs  util.rs
src/controllers/bot/: manage.rs  metadata.rs  owners.rs  votes.rs
src/controllers/helpers/: pagination.rs
src/controllers/user/: me.rs  session.rs
src/database/: 0000_bizarre_mach_iv.sql  0000_cheerful_morg.sql  0000_curved_electro.sql  0001_far_bishop.sql  0001_wooden_smiling_tiger.sql  0002_left_skullbuster.sql  0003_chief_old_lace.sql  0004_dark_hannibal_king.sql  schema.ts
src/database/common/: now.ts  onUpdate.ts
src/database/cursors/: bots.cursor.ts  index.ts
src/database/enums/: bot.ts  index.ts  vanity.ts  webhook.ts
src/database/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
src/database/migrations/: 0000_closed_stepford_cuckoos.sql  0000_dizzy_baron_zemo.sql  0000_init.sql  0001_neat_rage.sql  0001_owner_permissions.sql  0002_large_thunderbolt_ross.sql  0002_webhook_payload.sql
src/database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src/database/tables/: badge.ts  badges-relations.ts  badges-tousers-relations.ts  badges-tousers.ts  badges.ts  bot.ts  bots-relations.ts  bots-totags-relations.ts  bots-totags.ts  bots-tousers-relations.ts  bots-tousers.ts  bots.ts  custom-bytes.ts  index.ts  review.ts  review_reply.ts  reviews-relations.ts  reviews.ts  schema.ts  session.ts  sessions-relations.ts  sessions.ts  tag.ts  tags-relations.ts  tags.ts  user.ts  users-relations.ts  users.ts  vanities.ts  vanity.ts  vote.ts  votes-relations.ts  votes.ts  webhook.ts  webhooks-relations.ts  webhooks.ts
src/lib/constants/: errors.ts  index.ts  limits.ts  throttler.ts  tokens.ts
src/lib/constants/discord/: endpoints.ts
src/lib/types/: Arguments.d.ts  apiBot.ts  drizzle.ts  index.ts
src/lib/types/graphql/: context.ts
src/lib/types/utils/: OmitType.ts  index.ts
src/lib/utils/: env.validation.ts  index.ts
src/lib/utils/bases/: guard.base.ts
src/lib/utils/common/: arrayDifferences.ts  arrayFind.ts  arrayMerge.ts  cast.ts  enumToArray.ts  index.ts
src/lib/utils/decorators/: omit-guards.decorator.ts
src/lib/utils/guards/: internal.guard.ts  throttler.guard.ts
src/lib/utils/indicators/: db-health.indicator.ts
src/middleware/: app.rs  debug.rs  log_request.rs  mod.rs  no_user_agent_message.txt  normalize_path.rs  real_ip.rs  require_user_agent.rs  session.rs
src/models/: bot.rs  bot_owners.rs  bot_to_user.rs  category.rs  owners.rs  review.rs  schema.rs  sql.rs  token.rs  toplevel.sql  user.rs  vanity.rs  vote.rs
src/models/helpers/: with_count.rs
src/models/token/: scopes.rs
src/modules/admin/: admin.module.ts
src/modules/admin/decorators/: permissions.decorator.ts
src/modules/admin/permissions/: user.permissions.ts
src/modules/admin/resolvers/: admin.resolver.ts  bot.resolver.ts
src/modules/admin/services/: admin.service.ts  bot.service.ts
src/modules/auth/: auth.module.ts
src/modules/auth/decorators/: user.decorator.ts
src/modules/auth/guards/: jwt-refresh.guard.ts  jwt.guard.ts
src/modules/auth/interfaces/: auth.interface.ts  discord.interface.ts  payload.interface.ts
src/modules/auth/resolvers/: auth.resolver.ts  user.resolver.ts
src/modules/auth/services/: auth.service.ts  user.service.ts
src/modules/auth/strategy/: jwt-refresh.strategy.ts  jwt.strategy.ts
src/modules/bot/: bot.module.ts
src/modules/bot/decorators/: permissions.decorator.ts
src/modules/vanity/: vanity.module.ts
src/sentry/: mod.rs
src/services/: hash.service.ts  paginator.service.ts  webhook.service.ts
src/util/: bytes_request.rs  env.rs  errors.rs  hashing_traits.rs  mod.rs  request_helper.rs  rfc3339.rs  sha256.rs  signals.rs  token.rs  tracing.rs
src/util/errors/: json.rs
test/: app.e2e-spec.ts
(+83 files in other folders)
