[package]
name = "izumo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [workspace]
# members = ["oauth"]

[dependencies]
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures-util.workspace = true
tracing.workspace = true
sentry.workspace = true
crates_io_env_vars.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tower-http.workspace = true
tower.workspace = true
axum-extra.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenvy = "=0.15.7"
secrecy = "=0.10.3"
url = "=2.5.3"
deadpool-diesel = { version = "=0.6.1", features = ["postgres", "tracing"] }
http-body-util = "=0.1.2"
parking_lot = "=0.12.3"
tokio-postgres = "=0.7.12"
derivative = "=2.2.0"
tokio-postgres-rustls = "=0.13.0"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "json"] }
rand = "=0.8.5"
thiserror = "=1.0.68"
base64 = "=0.22.1"
cookie = { version = "=0.18.1", features = ["secure"] }
oauth2 = "=4.4.2"
indexmap = "=2.6.0"
paste = "=1.0.15"
ipnetwork = "=0.20.0"
openssl = { version = "=0.10.68", features = ["vendored"] }

[workspace.dependencies]
reqwest = { version = "=0.12.9", features = ["blocking", "gzip", "json"] }
jsonwebtoken = "=9.3.0"
anyhow = "=1.0.87"
axum = { version = "=0.7.7", features = ["macros", "matched-path"] }
axum-extra = { version = "=0.10.0", features = [
    "cookie-signed",
    "typed-header",
] }
diesel = { version = "=2.2.4", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
] }
tower = "=0.4.13"
tower-http = { version = "=0.6.1", features = [
    "add-extension",
    "fs",
    "catch-panic",
    "timeout",
    "compression-full",
] }
sentry = { version = "=0.34.0", features = [
    "tracing",
    "tower",
    "tower-axum-matched-path",
    "tower-http",
] }
crates_io_env_vars = { git = "https://github.com/rust-lang/crates.io.git", branch = "main" }
diesel-async = { version = "=0.5.0", features = [
    "postgres",
    "async-connection-wrapper",
    "deadpool",
] }
chrono = { version = "=0.4.38", features = ["serde"] }
serde = { version = "=1.0.214", features = ["derive"] }
serde_json = "=1.0.132"
tracing = "=0.1.40"
futures-util = "=0.3.31"
tokio = { version = "=1.41.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
claims = "=0.7.1"
