[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
futures-util.workspace = true
tokio-postgres = "0.7.11"
tokio-postgres-rustls = "0.12.0"
url = "2.5.2"
